fix stretch

--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -41,5 +41,6 @@ h2 {
     border-radius: 5px 5px 5px 5px;
     margin: 10px;
     border: 2px solid black;
+    display: grid;
     grid-template-columns: 1fr;
 }
